kube-audit-rest/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-audit-rest
  name: kube-audit-rest
  namespace: kube-audit-rest
spec:
  progressDeadlineSeconds: 600
  replicas: 1 # Can be HA
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kube-audit-rest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kube-audit-rest
    spec:
      automountServiceAccountToken: false
      containers:
      - image: "ghcr.io/richardoc/kube-audit-rest:1.0.22-alpine"
        imagePullPolicy: IfNotPresent
        name: kube-audit-rest
        command: # Adding example for overrides
        - "/kube-audit-rest"
        args:
        - "--logger-max-backups=1" # Example of reducing number of files stored
        resources:
          requests:
            cpu:  "2m"
            memory: "10Mi"
          limits:
            cpu: "1"
            memory: "32Mi"
        ports:
        - containerPort: 9090
          protocol: TCP
          name: https
        - containerPort: 55555
          protocol: TCP
          name: metrics
        volumeMounts:
        - name: certs
          mountPath: "/etc/tls"
          readOnly: true
        - name: tmp
          mountPath: "/tmp"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: 
            - ALL 
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        # fsGroup: 255999
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: certs
        secret:
          secretName: kube-audit-rest-tls
      - name: tmp
        persistentVolumeClaim:
          claimName: kube-audit-rest-pvc
