kube-audit-rest/k8s/validation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kube-audit-rest
  labels:
    app: kube-audit-rest
webhooks:
  - name: kube-audit-rest.kube-audit-rest.svc
    failurePolicy: Ignore
    timeoutSeconds: 5
    sideEffects: None
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["argocd", "istio-system", "kube-system", "kube-public"]
    clientConfig:
      service:
        name: kube-audit-rest
        namespace: kube-audit-rest
        path: "/log-request"
        port: 443
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lVVzFHbzVwQUJXZWZuZk5Dd2lFa1htWE9yQkNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NhM1ZpWlMxaGRXUnBkQzF5WlhOMExXTmhNQjRYRFRJMU1Ea3dNVEF3TkRBeQpNbG9YRFRJMk1Ea3dNVEF3TkRBeU1sb3dIVEViTUJrR0ExVUVBd3dTYTNWaVpTMWhkV1JwZEMxeVpYTjBMV05oCk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBcjFFYy9ucEdTeW1jV1NDWlBPeHIKbERROWY0NkRYb0h1dGJQTFgrTFo3NklJYTZHb0F3ZXhRWDYzb2Uyb3NSclNHdlVyTVY2SzFTanBDZENZUVFwSwoxV1BOQTRVZmY [...]
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*/*"]
        scope: "*"
      - operations: ["CONNECT"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods/exec", "pods/portforward", "pods/proxy", "pods/attach"]
        scope: "*"
    admissionReviewVersions: ["v1"]
